--- a/Web.MVC3/Web.config
+++ b/Web.MVC3/Web.config
@@ -19,13 +19,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="MongoServer" connectionString="mongodb://localhost/lietuva" />
-    <add name="MongoDB" connectionString="lietuva" />
-    <add name="ElmahConnectionString" connectionString="Data Source=.;Initial Catalog=LT2_Reporting;Persist Security Info=True;User ID=net_user;Password=netuser" providerName="System.Data.SqlClient" />
-    <add name="Data.Properties.Settings.LT2_ReportingConnectionString" connectionString="Data Source=.;Initial Catalog=LT2_Reporting;Persist Security Info=True;User ID=net_user;Password=netuser" providerName="System.Data.SqlClient" />
-    <add name="ActionsEntities" connectionString="metadata=res://*/EF.Actions.Actions.csdl|res://*/EF.Actions.Actions.ssdl|res://*/EF.Actions.Actions.msl;provider=System.Data.SqlClient;provider connection string='Data Source=.;Initial Catalog=LT2_Actions;Persist Security Info=True;User ID=net_user;Password=netuser;MultipleActiveResultSets=True'" providerName="System.Data.EntityClient" />
-    <add name="VotingEntities" connectionString="metadata=res://*/EF.Voting.Voting.csdl|res://*/EF.Voting.Voting.ssdl|res://*/EF.Voting.Voting.msl;provider=System.Data.SqlClient;provider connection string='Data Source=.;Initial Catalog=LT2_Voting;Persist Security Info=True;User ID=net_user;Password=netuser;MultipleActiveResultSets=True'" providerName="System.Data.EntityClient" />
-    <add name="UsersEntities" connectionString="metadata=res://*/EF.Users.Users.csdl|res://*/EF.Users.Users.ssdl|res://*/EF.Users.Users.msl;provider=System.Data.SqlClient;provider connection string='Data Source=.;Initial Catalog=LT2_Users;User ID=net_user;Password=netuser;MultipleActiveResultSets=True'" providerName="System.Data.EntityClient" />
+    <add name="MongoServer" connectionString="" />
+    <add name="MongoDB" connectionString="" />
+    <add name="ElmahConnectionString" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="Data.Properties.Settings.LT2_ReportingConnectionString" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="ActionsEntities" connectionString="" providerName="System.Data.EntityClient" />
+    <add name="VotingEntities" connectionString="" providerName="System.Data.EntityClient" />
+    <add name="UsersEntities" connectionString="" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="ClientValidationEnabled" value="true" />
