Remove sensitive data

--- a/Bus.CommandHandler/app.config
+++ b/Bus.CommandHandler/app.config
@@ -8,23 +8,23 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="MongoServer" connectionString="mongodb://localhost/lietuva" />
-    <add name="MongoDB" connectionString="lietuva" />
-    <add name="Data.Properties.Settings.LT2_ReportingConnectionString" connectionString="Data Source=.;Initial Catalog=LT2_Reporting;Persist Security Info=True;User ID=net_user;Password=netuser" providerName="System.Data.SqlClient" />
-    <add name="ActionsEntities" connectionString="metadata=res://*/EF.Actions.Actions.csdl|res://*/EF.Actions.Actions.ssdl|res://*/EF.Actions.Actions.msl;provider=System.Data.SqlClient;provider connection string='Data Source=.;Initial Catalog=LT2_Actions;Persist Security Info=True;User ID=net_user;Password=netuser;MultipleActiveResultSets=True'" providerName="System.Data.EntityClient" />
-    <add name="VotingEntities" connectionString="metadata=res://*/EF.Voting.Voting.csdl|res://*/EF.Voting.Voting.ssdl|res://*/EF.Voting.Voting.msl;provider=System.Data.SqlClient;provider connection string='Data Source=.;Initial Catalog=LT2_Voting;Persist Security Info=True;User ID=net_user;Password=netuser;MultipleActiveResultSets=True'" providerName="System.Data.EntityClient" />
-    <add name="UsersEntities" connectionString="metadata=res://*/EF.Users.Users.csdl|res://*/EF.Users.Users.ssdl|res://*/EF.Users.Users.msl;provider=System.Data.SqlClient;provider connection string='Data Source=.;Initial Catalog=LT2_Users;User ID=net_user;Password=netuser;MultipleActiveResultSets=True'" providerName="System.Data.EntityClient" />
+    <add name="MongoServer" connectionString="" />
+    <add name="MongoDB" connectionString="" />
+    <add name="Data.Properties.Settings.LT2_ReportingConnectionString" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="ActionsEntities" connectionString="" providerName="System.Data.EntityClient" />
+    <add name="VotingEntities" connectionString="" providerName="System.Data.EntityClient" />
+    <add name="UsersEntities" connectionString="" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.net>
     <mailSettings>
       <smtp from="mail@lietuva2.net">
-        <network host="peak.bluebridge.local" port="25" defaultCredentials="false" />
+        <network host="" port="25" defaultCredentials="false" />
       </smtp>
     </mailSettings>
   </system.net>
   <appSettings>
     <add key="ReplyTo" value="mail@lietuva2.net" />
-    <add key="SearchIndexFolder" value="C:\Work\Lietuva2\Source\LuceneSearchIndex" />
+    <add key="SearchIndexFolder" value="" />
     <add key="EndpointName" value="Bus.CommandHandler" />
   </appSettings>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="DPErrors" />
